# ARGUS

./: README.md
src/description/: CMakeLists.txt  package.xml
src/description/urdf/: argus.urdf.xacro
src/gazebo/: CMakeLists.txt  package.xml
src/gazebo/launch/: spawn.launch
src/gazebo/maps/: lunar_habitat.world
src/gazebo/models/moon_terrain/: Moon_Lunar_Terrain_gray_513.tif  model.config  model.sdf
src/gazebo/worlds/: lunar_habitat.world
src/navigation/: CMakeLists.txt  package.xml
src/navigation/launch/: gmapping.launch
src/tasks/: CMakeLists.txt  package.xml
