<?xml version="1.0"?>
<package format="2">
  <name>argus_gazebo</name>
  <version>0.0.1</version>
  <description>The argus_gazebo package</description>

  <maintainer email="aaryankhairnar.amk@gmail.com">Aaryan Khairnar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>