<?xml version="1.0"?>
<package format="2">
  <name>argus_tasks</name>
  <version>0.0.1</version>
  <description>The argus_tasks package</description>

  <maintainer email="aaryankhairnar.amk@gmail.com">Aaryan Khairnar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

</package>