<?xml version="1.0"?>
<package format="2">
  <name>argus_tasks</name>
  <version>0.0.1</version>
  <description>The argus_tasks package</description>

  <maintainer email="aaryankhairnar.amk@gmail.com">Aaryan Khairnar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

</package>